sjengida/c0/tree_debug
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/tree_debug/src/utils.c:1402:25: error: use of undeclared identifier 'off_428D0D'
stream = fopen( input, &off_428D0D[2]); 
                        ^
1 error generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/tree_debug/src/obj/utils.o] Error 1
